# gray-logic-stack

./: .editorconfig  .geminiignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEBASE.md  GEMINI.md  PROJECT-STATUS.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  prd.json  progress.txt  structupdate.ps1
.agent/workflows/: package-documentation.md
.claude/: review-tracker.json  settings.local.json
.claude/commands/: add-domain.md  add-entity.md  audit-deps.md  bench.md  chaos.md  check-principles.md  code-audit.md  docs-sync.md  explain-code.md  health-check.md  milestone-audit.md  new-bridge.md  nuke-rebuild.md  optimise.md  pre-commit.md  red-team.md  review-all.md  security.md  stability.md  standards.md
.github/: copilot-instructions.md
code/core/: .bench-baseline.txt  .gitignore  .golangci.yml  AGENTS.md  CONTAINER.md  Dockerfile  IMPLEMENTATION.md  Makefile  docker-compose.yml  go.mod  go.sum  influx_cover.out
code/node-red/: README.md
code/openhab/: README.md
code/scripts/: backup.sh  restore.sh
code/stack/: .env.example
code/ui/retropanel/: .gitignore  CMakeLists.txt  Makefile  README.md
code/ui/retropanel/sdl_simulator/: CMakeLists.txt  lv_conf.h  main.c
code/ui/retropanel/src/: app.c  app.h
code/ui/retropanel/src/data/: data_model.c  data_model.h  data_store.c  data_store.h
code/ui/retropanel/src/net/: command.c  command.h  mqtt_client.c  mqtt_client.h  panel_config.c  panel_config.h  rest_client.c  rest_client.h
code/ui/retropanel/src/screens/: scr_room_view.c  scr_room_view.h
code/ui/retropanel/src/theme/: mono_font.c  mono_font_lg.c  nixie_font.c  nixie_font_sm.c  retro_colors.h  retro_theme.c  retro_theme.h
code/ui/retropanel/src/widgets/: bakelite_btn.c  bakelite_btn.h  blind_slider.c  blind_slider.h  nixie_display.c  nixie_display.h  scanline_overlay.c  scanline_overlay.h  scene_bar.c  scene_bar.h  vu_meter.c  vu_meter.h
code/ui/retropanel/tools/: font_convert.sh
docs/: CONSTRAINTS.md  ai-premium-features.md  architecture.md  audit-iteration-2-log.md  audit-iteration-3-log.md  audit-iteration-5-log.md  audit-iteration-5-prompt.md  audit-iteration-6-log.md  audit-iteration-6-prompt.md  audit-iteration-8-log.md  audit-summary.md  business-case.md  gray-logic-stack.md  handover-pack-template.md  sales-spec.md
docs/architecture/: bridge-interface.md  cloud-relay.md  core-internals.md  energy-model.md  failure-memory.md  mqtt-resilience.md  security-model.md  supervisor.md  system-overview.md  workflow-learning.md
docs/archive/: audit-iteration-3-log.md  audit-iteration-4-log.md  audit-iteration-7-log.md
docs/automation/: automation.md  override-logic.md
notes/: dali-bridge-plan.md  strategy-and-positioning.md
tasks/: codex-phase3-state-audit-trail.md  codex-phase4-state-history-endpoints.md  m17-auth-hardening-followup.md  m21-tags-groups-zones.md  prd-m1.1-complete.md
(+550 files in other folders)
